--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "express": "^4.16.3",
     "lodash": "^4.17.5",
     "mdi": "^2.1.19",
     "moment": "^2.20.1",
